@@ -6,7 +6,6 @@ use warnings;
 use Catalyst::Exception;
 use Catalyst::Utils;
 use Class::Inspector;
-use UNIVERSAL::require;
 
 =head1 NAME
 
@@ -77,8 +76,7 @@ sub import {
 
     else {
         unless( Class::Inspector->loaded( $class ) ) {
-            $class->require;
-            die $@ if $@;
+            require Class::Inspector->filename( $class );
         }
         $class->import;
 
